--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
         </div>
         
         <footer>
-            <p>Lagos City University | Department of Information Technology</p>
+            <p>Lead City University | Department of Computer Science</p>
             <p>© 2025 All rights reserved | LCU-COS 109: Introduction to Web Computing</p>
         </footer>
     </div>
